syntax = "proto3";

package chunk;

message ChunkLoc {
	string mapName = 1;
	int32 x = 2;
	int32 y = 3;
}
message IntRow {
	repeated int32 items = 1;
}
message FloatRow {
	repeated float items = 1;
}

message Unit {
	string uuid = 1;
	string tileHash = 2;
}

message Chunk {
	string hash = 1;
	string map = 2;
	int32 x = 3;
	int32 y = 4;
	repeated IntRow navGrid = 5;
	repeated FloatRow grid = 6;
	int32 chunkSize = 7;
	repeated Unit units = 8;
}

service Map {
	rpc getChunk(ChunkLoc) returns (Chunk) {}
}
